--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "myvoterapp",
+  "name": "vote",
   "version": "1.0.0",
-  "description": "My node application creating a online voting platform",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -e js,ejs",
-    "test": "jest",
+    "start": "nodemon index.js",
+    "start:prod": "node index.js",
+    "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create && NODE_ENV=test npx sequelize-cli db:migrate ",
+    "test": "NODE_ENV=test jest --detectOpenHandles",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -14,28 +16,32 @@
       "prettier --write ."
     ]
   },
-  "author": "Vamshi Vignesh <bagulavamshivignesh25@gmail.com>",
+  "author": "saimallik <rameshwaramsaimallik@gmail.com>",
   "license": "ISC",
-  "devDependencies": {
-    "eslint": "^8.31.0",
-    "husky": "^8.0.3",
-    "jest": "^29.3.1",
-    "lint-staged": "^13.1.0",
-    "nodemon": "^2.0.20",
-    "prettier": "^2.8.1",
-    "sequelize-cli": "^6.5.2"
-  },
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.1",
     "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
+    "csrf": "^3.1.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.26.0",
+    "tiny-csrf": "^1.1.3"
+  },
+  "devDependencies": {
+    "cheerio": "^1.0.0-rc.12",
+    "eslint": "^8.29.0",
+    "husky": "^8.0.2",
+    "jest": "^29.3.1",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.1",
+    "sequelize-cli": "^6.5.2",
+    "supertest": "^6.3.3"
   }
 }
